// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#fetchEndpoints 1`] = `
{
  "collectedData": {},
  "collectedEntities": [
    {
      "_class": [
        "Device",
      ],
      "_key": "user_endpoint.241056b69203a660e7521c8c3bfc2476f8cf2ae0",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "@odata.context": "https://api.securitycenter.microsoft.com/api/$metadata#Machines/$entity",
            "aadDeviceId": null,
            "agentVersion": "30.123032.19864.0",
            "computerDnsName": "VM1.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
            "defenderAvStatus": "NotSupported",
            "deviceValue": "Normal",
            "exclusionReason": null,
            "exposureLevel": "Low",
            "firstSeen": "2024-01-25T18:45:56.688814Z",
            "healthStatus": "Inactive",
            "id": "241056b69203a660e7521c8c3bfc2476f8cf2ae0",
            "ipAddresses": [
              {
                "ipAddress": "10.6.0.6",
                "macAddress": "000D3A9ABB3A",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "fe80::20d:3aff:fe9a:bb3a",
                "macAddress": "000D3A9ABB3A",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "127.0.0.1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "::1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
            ],
            "isAadJoined": null,
            "isExcluded": false,
            "isPotentialDuplication": false,
            "lastExternalIpAddress": "172.203.230.54",
            "lastIpAddress": "10.6.0.6",
            "lastSeen": "2024-01-25T18:45:56.688814Z",
            "machineTags": [],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "mergedIntoMachineId": null,
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": null,
            "osPlatform": "Ubuntu",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "None",
            "version": "20.4",
            "vmMetadata": {
              "cloudProvider": "Azure",
              "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/j1dev/providers/Microsoft.Compute/virtualMachines/VM1",
              "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
              "vmId": "2ca81940-456f-4e56-b80a-68b4f3d3da23",
            },
          },
        },
      ],
      "_type": "user_endpoint",
      "aadDeviceId": null,
      "agentVersion": "30.123032.19864.0",
      "category": "endpoint",
      "cloudProvider": "Azure",
      "computerDnsName": "VM1.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "createdOn": undefined,
      "defenderAvStatus": "NotSupported",
      "deviceId": "241056b69203a660e7521c8c3bfc2476f8cf2ae0",
      "deviceValue": "Normal",
      "displayName": "VM1.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "exposureLevel": "Low",
      "firstSeenOn": 1706208356688,
      "healthStatus": "Inactive",
      "id": "241056b69203a660e7521c8c3bfc2476f8cf2ae0",
      "ipAddress": [
        "10.6.0.6",
        "fe80::20d:3aff:fe9a:bb3a",
      ],
      "ipAddresses": [
        "10.6.0.6",
        "fe80::20d:3aff:fe9a:bb3a",
        "127.0.0.1",
        "::1",
      ],
      "isAadJoined": null,
      "lastExternalIpAddress": "172.203.230.54",
      "lastIpAddress": "10.6.0.6",
      "lastSeenOn": 1706208356688,
      "macAddress": [
        "00:0d:3a:9a:bb:3a",
        "00:0D:3A:9A:BB:3A",
      ],
      "machineTags": [],
      "make": null,
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "model": null,
      "name": "VM1.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "onboardingStatus": "Onboarded",
      "osArchitecture": "64-bit",
      "osBuild": null,
      "osPlatform": "Ubuntu",
      "osProcessor": "x64",
      "osVersion": undefined,
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/j1dev/providers/Microsoft.Compute/virtualMachines/VM1",
      "riskScore": "None",
      "serial": null,
      "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
      "version": "20.4",
      "vmId": "2ca81940-456f-4e56-b80a-68b4f3d3da23",
    },
    {
      "_class": [
        "Device",
      ],
      "_key": "user_endpoint.3294214a41cbf3c14bda3d1024c5b74eca678841",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "@odata.context": "https://api.securitycenter.microsoft.com/api/$metadata#Machines/$entity",
            "aadDeviceId": null,
            "agentVersion": "30.123102.3.0",
            "computerDnsName": "gaston-ivm-test.us-central1-a.c.j1-gc-integration-dev-v3.internal",
            "defenderAvStatus": "NotSupported",
            "deviceValue": "Normal",
            "exclusionReason": null,
            "exposureLevel": "Low",
            "firstSeen": "2023-12-06T22:34:54.784629Z",
            "healthStatus": "Inactive",
            "id": "3294214a41cbf3c14bda3d1024c5b74eca678841",
            "ipAddresses": [
              {
                "ipAddress": "10.128.15.224",
                "macAddress": "42010A800FE0",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "fe80::4001:aff:fe80:fe0",
                "macAddress": "42010A800FE0",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "127.0.0.1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "::1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
            ],
            "isAadJoined": false,
            "isExcluded": false,
            "isPotentialDuplication": false,
            "lastExternalIpAddress": "35.193.158.217",
            "lastIpAddress": "10.128.15.224",
            "lastSeen": "2023-12-06T22:47:02.377675Z",
            "machineTags": [],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "mergedIntoMachineId": null,
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": null,
            "osPlatform": "Ubuntu",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "None",
            "version": "20.4",
            "vmMetadata": {
              "cloudProvider": "Azure",
              "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/gcp-integration-dev/providers/Microsoft.HybridCompute/machines/gaston-ivm-test-4037777038195379492",
              "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
              "vmId": "579ac495-e1e2-4fb1-b76e-85a706e79a9b",
            },
          },
        },
      ],
      "_type": "user_endpoint",
      "aadDeviceId": null,
      "agentVersion": "30.123102.3.0",
      "category": "endpoint",
      "cloudProvider": "Azure",
      "computerDnsName": "gaston-ivm-test.us-central1-a.c.j1-gc-integration-dev-v3.internal",
      "createdOn": undefined,
      "defenderAvStatus": "NotSupported",
      "deviceId": "3294214a41cbf3c14bda3d1024c5b74eca678841",
      "deviceValue": "Normal",
      "displayName": "gaston-ivm-test.us-central1-a.c.j1-gc-integration-dev-v3.internal",
      "exposureLevel": "Low",
      "firstSeenOn": 1701902094784,
      "healthStatus": "Inactive",
      "id": "3294214a41cbf3c14bda3d1024c5b74eca678841",
      "ipAddress": [
        "10.128.15.224",
        "fe80::4001:aff:fe80:fe0",
      ],
      "ipAddresses": [
        "10.128.15.224",
        "fe80::4001:aff:fe80:fe0",
        "127.0.0.1",
        "::1",
      ],
      "isAadJoined": false,
      "lastExternalIpAddress": "35.193.158.217",
      "lastIpAddress": "10.128.15.224",
      "lastSeenOn": 1701902822377,
      "macAddress": [
        "42:01:0a:80:0f:e0",
        "42:01:0A:80:0F:E0",
      ],
      "machineTags": [],
      "make": null,
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "model": null,
      "name": "gaston-ivm-test.us-central1-a.c.j1-gc-integration-dev-v3.internal",
      "onboardingStatus": "Onboarded",
      "osArchitecture": "64-bit",
      "osBuild": null,
      "osPlatform": "Ubuntu",
      "osProcessor": "x64",
      "osVersion": undefined,
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/gcp-integration-dev/providers/Microsoft.HybridCompute/machines/gaston-ivm-test-4037777038195379492",
      "riskScore": "None",
      "serial": null,
      "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
      "version": "20.4",
      "vmId": "579ac495-e1e2-4fb1-b76e-85a706e79a9b",
    },
    {
      "_class": [
        "Device",
      ],
      "_key": "user_endpoint.5582c16c2b8866def83125320b1754481686f65b",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "@odata.context": "https://api.securitycenter.microsoft.com/api/$metadata#Machines/$entity",
            "aadDeviceId": null,
            "agentVersion": "30.124012.1.0",
            "computerDnsName": "sonarqube.us-central1-a.c.j1-gc-integration-dev-v3.internal",
            "defenderAvStatus": "NotSupported",
            "deviceValue": "Normal",
            "exclusionReason": null,
            "exposureLevel": "Low",
            "firstSeen": "2023-01-17T19:21:57.487Z",
            "healthStatus": "Active",
            "id": "5582c16c2b8866def83125320b1754481686f65b",
            "ipAddresses": [
              {
                "ipAddress": "fe80::d9:fcff:fe17:ff1e",
                "macAddress": "02D9FC17FF1E",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "172.17.0.1",
                "macAddress": "0242F5BBD085",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "fe80::42:f5ff:febb:d085",
                "macAddress": "0242F5BBD085",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "10.128.15.219",
                "macAddress": "42010A800FDB",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "fe80::4001:aff:fe80:fdb",
                "macAddress": "42010A800FDB",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "127.0.0.1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "::1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
            ],
            "isAadJoined": false,
            "isExcluded": false,
            "isPotentialDuplication": false,
            "lastExternalIpAddress": "34.171.196.173",
            "lastIpAddress": "10.128.15.219",
            "lastSeen": "2024-03-25T23:27:59.136203Z",
            "machineTags": [],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "mergedIntoMachineId": null,
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": null,
            "osPlatform": "Debian",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "None",
            "version": "Other",
            "vmMetadata": {
              "cloudProvider": "Azure",
              "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/gcp-integration-dev/providers/Microsoft.HybridCompute/machines/sonarqube-4356273881400950770",
              "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
              "vmId": "f8c3afb9-773c-4c4b-84fa-173cab19c7e6",
            },
          },
        },
      ],
      "_type": "user_endpoint",
      "aadDeviceId": null,
      "agentVersion": "30.124012.1.0",
      "category": "endpoint",
      "cloudProvider": "Azure",
      "computerDnsName": "sonarqube.us-central1-a.c.j1-gc-integration-dev-v3.internal",
      "createdOn": undefined,
      "defenderAvStatus": "NotSupported",
      "deviceId": "5582c16c2b8866def83125320b1754481686f65b",
      "deviceValue": "Normal",
      "displayName": "sonarqube.us-central1-a.c.j1-gc-integration-dev-v3.internal",
      "exposureLevel": "Low",
      "firstSeenOn": 1673983317487,
      "healthStatus": "Active",
      "id": "5582c16c2b8866def83125320b1754481686f65b",
      "ipAddress": [
        "fe80::d9:fcff:fe17:ff1e",
        "172.17.0.1",
        "fe80::42:f5ff:febb:d085",
        "10.128.15.219",
        "fe80::4001:aff:fe80:fdb",
      ],
      "ipAddresses": [
        "fe80::d9:fcff:fe17:ff1e",
        "172.17.0.1",
        "fe80::42:f5ff:febb:d085",
        "10.128.15.219",
        "fe80::4001:aff:fe80:fdb",
        "127.0.0.1",
        "::1",
      ],
      "isAadJoined": false,
      "lastExternalIpAddress": "34.171.196.173",
      "lastIpAddress": "10.128.15.219",
      "lastSeenOn": 1711409279136,
      "macAddress": [
        "42:01:0a:80:0f:db",
        "42:01:0A:80:0F:DB",
      ],
      "machineTags": [],
      "make": null,
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "model": null,
      "name": "sonarqube.us-central1-a.c.j1-gc-integration-dev-v3.internal",
      "onboardingStatus": "Onboarded",
      "osArchitecture": "64-bit",
      "osBuild": null,
      "osPlatform": "Debian",
      "osProcessor": "x64",
      "osVersion": undefined,
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/gcp-integration-dev/providers/Microsoft.HybridCompute/machines/sonarqube-4356273881400950770",
      "riskScore": "None",
      "serial": null,
      "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
      "version": "Other",
      "vmId": "f8c3afb9-773c-4c4b-84fa-173cab19c7e6",
    },
    {
      "_class": [
        "Device",
      ],
      "_key": "user_endpoint.6dd3f7ce1291c2ccd7a1da22f0934bca93ee2e24",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "@odata.context": "https://api.securitycenter.microsoft.com/api/$metadata#Machines/$entity",
            "aadDeviceId": null,
            "agentVersion": "30.123062.10.0",
            "computerDnsName": "instance-1.us-central1-a.c.j1-gc-integration-dev-v3.internal",
            "defenderAvStatus": "NotSupported",
            "deviceValue": "Normal",
            "exclusionReason": null,
            "exposureLevel": "Medium",
            "firstSeen": "2023-07-29T11:28:10.003613Z",
            "healthStatus": "Active",
            "id": "6dd3f7ce1291c2ccd7a1da22f0934bca93ee2e24",
            "ipAddresses": [
              {
                "ipAddress": "10.128.15.223",
                "macAddress": "42010A800FDF",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "fe80::4001:aff:fe80:fdf",
                "macAddress": "42010A800FDF",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "127.0.0.1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "::1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
            ],
            "isAadJoined": false,
            "isExcluded": false,
            "isPotentialDuplication": false,
            "lastExternalIpAddress": "34.172.130.250",
            "lastIpAddress": "10.128.15.223",
            "lastSeen": "2024-03-26T00:04:48.577193Z",
            "machineTags": [],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "mergedIntoMachineId": null,
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": null,
            "osPlatform": "Debian",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "None",
            "version": "Other",
            "vmMetadata": {
              "cloudProvider": "Azure",
              "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/gcp-integration-dev/providers/Microsoft.HybridCompute/machines/instance-1-4375182715392730702",
              "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
              "vmId": "d0d49744-fa25-40c9-8d5f-832a3fdf8155",
            },
          },
        },
      ],
      "_type": "user_endpoint",
      "aadDeviceId": null,
      "agentVersion": "30.123062.10.0",
      "category": "endpoint",
      "cloudProvider": "Azure",
      "computerDnsName": "instance-1.us-central1-a.c.j1-gc-integration-dev-v3.internal",
      "createdOn": undefined,
      "defenderAvStatus": "NotSupported",
      "deviceId": "6dd3f7ce1291c2ccd7a1da22f0934bca93ee2e24",
      "deviceValue": "Normal",
      "displayName": "instance-1.us-central1-a.c.j1-gc-integration-dev-v3.internal",
      "exposureLevel": "Medium",
      "firstSeenOn": 1690630090003,
      "healthStatus": "Active",
      "id": "6dd3f7ce1291c2ccd7a1da22f0934bca93ee2e24",
      "ipAddress": [
        "10.128.15.223",
        "fe80::4001:aff:fe80:fdf",
      ],
      "ipAddresses": [
        "10.128.15.223",
        "fe80::4001:aff:fe80:fdf",
        "127.0.0.1",
        "::1",
      ],
      "isAadJoined": false,
      "lastExternalIpAddress": "34.172.130.250",
      "lastIpAddress": "10.128.15.223",
      "lastSeenOn": 1711411488577,
      "macAddress": [
        "42:01:0a:80:0f:df",
        "42:01:0A:80:0F:DF",
      ],
      "machineTags": [],
      "make": null,
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "model": null,
      "name": "instance-1.us-central1-a.c.j1-gc-integration-dev-v3.internal",
      "onboardingStatus": "Onboarded",
      "osArchitecture": "64-bit",
      "osBuild": null,
      "osPlatform": "Debian",
      "osProcessor": "x64",
      "osVersion": undefined,
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/gcp-integration-dev/providers/Microsoft.HybridCompute/machines/instance-1-4375182715392730702",
      "riskScore": "None",
      "serial": null,
      "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
      "version": "Other",
      "vmId": "d0d49744-fa25-40c9-8d5f-832a3fdf8155",
    },
    {
      "_class": [
        "Device",
      ],
      "_key": "user_endpoint.7b14aeb07923dc786f6ff19ec58f879ae3416eac",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "@odata.context": "https://api.securitycenter.microsoft.com/api/$metadata#Machines/$entity",
            "aadDeviceId": null,
            "agentVersion": "10.8560.20348.1906",
            "computerDnsName": "int-cmdc01.contoso.com",
            "defenderAvStatus": "NotSupported",
            "deviceValue": "Normal",
            "exclusionReason": null,
            "exposureLevel": "High",
            "firstSeen": "2023-06-16T21:55:01.0275511Z",
            "healthStatus": "Inactive",
            "id": "7b14aeb07923dc786f6ff19ec58f879ae3416eac",
            "ipAddresses": [],
            "isAadJoined": false,
            "isExcluded": false,
            "isPotentialDuplication": false,
            "lastExternalIpAddress": "20.228.186.184",
            "lastIpAddress": "10.0.0.4",
            "lastSeen": "2024-01-26T15:44:34.551332Z",
            "machineTags": [],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "mergedIntoMachineId": null,
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": 20348,
            "osPlatform": "WindowsServer2022",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "None",
            "version": "21H2",
            "vmMetadata": {
              "cloudProvider": "Azure",
              "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/INT-CM/providers/Microsoft.Compute/virtualMachines/int-cmdc01",
              "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
              "vmId": "8e71e669-b257-4bfb-ac7d-c1687e3a984b",
            },
          },
        },
      ],
      "_type": "user_endpoint",
      "aadDeviceId": null,
      "agentVersion": "10.8560.20348.1906",
      "category": "endpoint",
      "cloudProvider": "Azure",
      "computerDnsName": "int-cmdc01.contoso.com",
      "createdOn": undefined,
      "defenderAvStatus": "NotSupported",
      "deviceId": "7b14aeb07923dc786f6ff19ec58f879ae3416eac",
      "deviceValue": "Normal",
      "displayName": "int-cmdc01.contoso.com",
      "exposureLevel": "High",
      "firstSeenOn": 1686952501027,
      "healthStatus": "Inactive",
      "id": "7b14aeb07923dc786f6ff19ec58f879ae3416eac",
      "ipAddress": [],
      "ipAddresses": [],
      "isAadJoined": false,
      "lastExternalIpAddress": "20.228.186.184",
      "lastIpAddress": "10.0.0.4",
      "lastSeenOn": 1706283874551,
      "macAddress": [],
      "machineTags": [],
      "make": null,
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "model": null,
      "name": "int-cmdc01.contoso.com",
      "onboardingStatus": "Onboarded",
      "osArchitecture": "64-bit",
      "osBuild": 20348,
      "osPlatform": "WindowsServer2022",
      "osProcessor": "x64",
      "osVersion": undefined,
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/INT-CM/providers/Microsoft.Compute/virtualMachines/int-cmdc01",
      "riskScore": "None",
      "serial": null,
      "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
      "version": "21H2",
      "vmId": "8e71e669-b257-4bfb-ac7d-c1687e3a984b",
    },
    {
      "_class": [
        "Device",
      ],
      "_key": "user_endpoint.9b189859e936033e7b446da0314f1eed352bd35c",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "@odata.context": "https://api.securitycenter.microsoft.com/api/$metadata#Machines/$entity",
            "aadDeviceId": null,
            "agentVersion": "30.123032.19864.0",
            "computerDnsName": "gonzalo.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
            "defenderAvStatus": "NotSupported",
            "deviceValue": "Normal",
            "exclusionReason": null,
            "exposureLevel": "None",
            "firstSeen": "2024-01-25T18:17:45.859768Z",
            "healthStatus": "Inactive",
            "id": "9b189859e936033e7b446da0314f1eed352bd35c",
            "ipAddresses": [
              {
                "ipAddress": "10.6.0.6",
                "macAddress": "0022482C268E",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "fe80::222:48ff:fe2c:268e",
                "macAddress": "0022482C268E",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "127.0.0.1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "::1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
            ],
            "isAadJoined": null,
            "isExcluded": false,
            "isPotentialDuplication": false,
            "lastExternalIpAddress": "74.235.111.85",
            "lastIpAddress": "10.6.0.6",
            "lastSeen": "2024-01-25T18:17:45.859768Z",
            "machineTags": [],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "mergedIntoMachineId": null,
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": null,
            "osPlatform": "Other",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "None",
            "version": "Other",
            "vmMetadata": {
              "cloudProvider": "Azure",
              "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/j1dev/providers/Microsoft.Compute/virtualMachines/gonzalo",
              "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
              "vmId": "c5391253-9dc6-45fa-93d8-9933de00f25e",
            },
          },
        },
      ],
      "_type": "user_endpoint",
      "aadDeviceId": null,
      "agentVersion": "30.123032.19864.0",
      "category": "endpoint",
      "cloudProvider": "Azure",
      "computerDnsName": "gonzalo.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "createdOn": undefined,
      "defenderAvStatus": "NotSupported",
      "deviceId": "9b189859e936033e7b446da0314f1eed352bd35c",
      "deviceValue": "Normal",
      "displayName": "gonzalo.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "exposureLevel": "None",
      "firstSeenOn": 1706206665859,
      "healthStatus": "Inactive",
      "id": "9b189859e936033e7b446da0314f1eed352bd35c",
      "ipAddress": [
        "10.6.0.6",
        "fe80::222:48ff:fe2c:268e",
      ],
      "ipAddresses": [
        "10.6.0.6",
        "fe80::222:48ff:fe2c:268e",
        "127.0.0.1",
        "::1",
      ],
      "isAadJoined": null,
      "lastExternalIpAddress": "74.235.111.85",
      "lastIpAddress": "10.6.0.6",
      "lastSeenOn": 1706206665859,
      "macAddress": [
        "00:22:48:2c:26:8e",
        "00:22:48:2C:26:8E",
      ],
      "machineTags": [],
      "make": null,
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "model": null,
      "name": "gonzalo.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "onboardingStatus": "Onboarded",
      "osArchitecture": "64-bit",
      "osBuild": null,
      "osPlatform": "Other",
      "osProcessor": "x64",
      "osVersion": undefined,
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/j1dev/providers/Microsoft.Compute/virtualMachines/gonzalo",
      "riskScore": "None",
      "serial": null,
      "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
      "version": "Other",
      "vmId": "c5391253-9dc6-45fa-93d8-9933de00f25e",
    },
    {
      "_class": [
        "Device",
      ],
      "_key": "user_endpoint.c29ad1684888fc29409e6a01f5914660642e55ed",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "@odata.context": "https://api.securitycenter.microsoft.com/api/$metadata#Machines/$entity",
            "aadDeviceId": null,
            "agentVersion": "30.123032.19864.0",
            "computerDnsName": "VMfromsharedimage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
            "defenderAvStatus": "NotSupported",
            "deviceValue": "Normal",
            "exclusionReason": null,
            "exposureLevel": "None",
            "firstSeen": "2024-01-26T15:15:27.089637Z",
            "healthStatus": "Inactive",
            "id": "c29ad1684888fc29409e6a01f5914660642e55ed",
            "ipAddresses": [
              {
                "ipAddress": "10.6.0.8",
                "macAddress": "6045BDD404C5",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "fe80::6245:bdff:fed4:4c5",
                "macAddress": "6045BDD404C5",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "127.0.0.1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "::1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
            ],
            "isAadJoined": null,
            "isExcluded": false,
            "isPotentialDuplication": false,
            "lastExternalIpAddress": "52.186.180.57",
            "lastIpAddress": "10.6.0.8",
            "lastSeen": "2024-01-26T15:25:27.089852Z",
            "machineTags": [],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "mergedIntoMachineId": null,
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": null,
            "osPlatform": "Ubuntu",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "None",
            "version": "20.4",
            "vmMetadata": {
              "cloudProvider": "Azure",
              "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/j1dev/providers/Microsoft.Compute/virtualMachines/VMfromsharedimage",
              "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
              "vmId": "aca8c64e-1f21-4221-9bfe-1c82c066f3ed",
            },
          },
        },
      ],
      "_type": "user_endpoint",
      "aadDeviceId": null,
      "agentVersion": "30.123032.19864.0",
      "category": "endpoint",
      "cloudProvider": "Azure",
      "computerDnsName": "VMfromsharedimage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "createdOn": undefined,
      "defenderAvStatus": "NotSupported",
      "deviceId": "c29ad1684888fc29409e6a01f5914660642e55ed",
      "deviceValue": "Normal",
      "displayName": "VMfromsharedimage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "exposureLevel": "None",
      "firstSeenOn": 1706282127089,
      "healthStatus": "Inactive",
      "id": "c29ad1684888fc29409e6a01f5914660642e55ed",
      "ipAddress": [
        "10.6.0.8",
        "fe80::6245:bdff:fed4:4c5",
      ],
      "ipAddresses": [
        "10.6.0.8",
        "fe80::6245:bdff:fed4:4c5",
        "127.0.0.1",
        "::1",
      ],
      "isAadJoined": null,
      "lastExternalIpAddress": "52.186.180.57",
      "lastIpAddress": "10.6.0.8",
      "lastSeenOn": 1706282727089,
      "macAddress": [
        "60:45:bd:d4:04:c5",
        "60:45:BD:D4:04:C5",
      ],
      "machineTags": [],
      "make": null,
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "model": null,
      "name": "VMfromsharedimage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "onboardingStatus": "Onboarded",
      "osArchitecture": "64-bit",
      "osBuild": null,
      "osPlatform": "Ubuntu",
      "osProcessor": "x64",
      "osVersion": undefined,
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/j1dev/providers/Microsoft.Compute/virtualMachines/VMfromsharedimage",
      "riskScore": "None",
      "serial": null,
      "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
      "version": "20.4",
      "vmId": "aca8c64e-1f21-4221-9bfe-1c82c066f3ed",
    },
    {
      "_class": [
        "Device",
      ],
      "_key": "user_endpoint.def78db6835982e4a5118980fffe341984302f9f",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "@odata.context": "https://api.securitycenter.microsoft.com/api/$metadata#Machines/$entity",
            "aadDeviceId": null,
            "agentVersion": "30.123032.19864.0",
            "computerDnsName": "fromImage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
            "defenderAvStatus": "NotSupported",
            "deviceValue": "Normal",
            "exclusionReason": null,
            "exposureLevel": "None",
            "firstSeen": "2024-01-25T17:11:51.415127Z",
            "healthStatus": "Inactive",
            "id": "def78db6835982e4a5118980fffe341984302f9f",
            "ipAddresses": [
              {
                "ipAddress": "10.6.0.5",
                "macAddress": "6045BDEE3402",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "fe80::6245:bdff:feee:3402",
                "macAddress": "6045BDEE3402",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "127.0.0.1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "::1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
            ],
            "isAadJoined": false,
            "isExcluded": false,
            "isPotentialDuplication": false,
            "lastExternalIpAddress": "172.203.231.0",
            "lastIpAddress": "10.6.0.5",
            "lastSeen": "2024-01-25T17:31:54.106498Z",
            "machineTags": [],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "mergedIntoMachineId": null,
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": null,
            "osPlatform": "Ubuntu",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "None",
            "version": "20.4",
            "vmMetadata": {
              "cloudProvider": "Azure",
              "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/j1dev/providers/Microsoft.Compute/virtualMachines/fromImage",
              "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
              "vmId": "9789f00d-8695-4051-b46b-c932c3640c5b",
            },
          },
        },
      ],
      "_type": "user_endpoint",
      "aadDeviceId": null,
      "agentVersion": "30.123032.19864.0",
      "category": "endpoint",
      "cloudProvider": "Azure",
      "computerDnsName": "fromImage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "createdOn": undefined,
      "defenderAvStatus": "NotSupported",
      "deviceId": "def78db6835982e4a5118980fffe341984302f9f",
      "deviceValue": "Normal",
      "displayName": "fromImage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "exposureLevel": "None",
      "firstSeenOn": 1706202711415,
      "healthStatus": "Inactive",
      "id": "def78db6835982e4a5118980fffe341984302f9f",
      "ipAddress": [
        "10.6.0.5",
        "fe80::6245:bdff:feee:3402",
      ],
      "ipAddresses": [
        "10.6.0.5",
        "fe80::6245:bdff:feee:3402",
        "127.0.0.1",
        "::1",
      ],
      "isAadJoined": false,
      "lastExternalIpAddress": "172.203.231.0",
      "lastIpAddress": "10.6.0.5",
      "lastSeenOn": 1706203914106,
      "macAddress": [
        "60:45:bd:ee:34:02",
        "60:45:BD:EE:34:02",
      ],
      "machineTags": [],
      "make": null,
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "model": null,
      "name": "fromImage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "onboardingStatus": "Onboarded",
      "osArchitecture": "64-bit",
      "osBuild": null,
      "osPlatform": "Ubuntu",
      "osProcessor": "x64",
      "osVersion": undefined,
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/j1dev/providers/Microsoft.Compute/virtualMachines/fromImage",
      "riskScore": "None",
      "serial": null,
      "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
      "version": "20.4",
      "vmId": "9789f00d-8695-4051-b46b-c932c3640c5b",
    },
    {
      "_class": [
        "Device",
      ],
      "_key": "user_endpoint.f432f68bdc6b053334f3c2948eb277b883cafbe0",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "@odata.context": "https://api.securitycenter.microsoft.com/api/$metadata#Machines/$entity",
            "aadDeviceId": null,
            "agentVersion": "30.123032.19864.0",
            "computerDnsName": "VMFromImage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
            "defenderAvStatus": "NotSupported",
            "deviceValue": "Normal",
            "exclusionReason": null,
            "exposureLevel": "Low",
            "firstSeen": "2024-01-25T18:25:19.388999Z",
            "healthStatus": "Inactive",
            "id": "f432f68bdc6b053334f3c2948eb277b883cafbe0",
            "ipAddresses": [
              {
                "ipAddress": "10.6.0.7",
                "macAddress": "0022481F9628",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "fe80::222:48ff:fe1f:9628",
                "macAddress": "0022481F9628",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "127.0.0.1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "::1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
            ],
            "isAadJoined": false,
            "isExcluded": false,
            "isPotentialDuplication": false,
            "lastExternalIpAddress": "74.235.110.3",
            "lastIpAddress": "10.6.0.7",
            "lastSeen": "2024-01-26T14:53:15.302862Z",
            "machineTags": [],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "mergedIntoMachineId": null,
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": null,
            "osPlatform": "Ubuntu",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "None",
            "version": "20.4",
            "vmMetadata": {
              "cloudProvider": "Azure",
              "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/j1dev/providers/Microsoft.Compute/virtualMachines/VMFromImage",
              "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
              "vmId": "00fe6c5e-889b-4f59-8489-f99bf14b035a",
            },
          },
        },
      ],
      "_type": "user_endpoint",
      "aadDeviceId": null,
      "agentVersion": "30.123032.19864.0",
      "category": "endpoint",
      "cloudProvider": "Azure",
      "computerDnsName": "VMFromImage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "createdOn": undefined,
      "defenderAvStatus": "NotSupported",
      "deviceId": "f432f68bdc6b053334f3c2948eb277b883cafbe0",
      "deviceValue": "Normal",
      "displayName": "VMFromImage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "exposureLevel": "Low",
      "firstSeenOn": 1706207119388,
      "healthStatus": "Inactive",
      "id": "f432f68bdc6b053334f3c2948eb277b883cafbe0",
      "ipAddress": [
        "10.6.0.7",
        "fe80::222:48ff:fe1f:9628",
      ],
      "ipAddresses": [
        "10.6.0.7",
        "fe80::222:48ff:fe1f:9628",
        "127.0.0.1",
        "::1",
      ],
      "isAadJoined": false,
      "lastExternalIpAddress": "74.235.110.3",
      "lastIpAddress": "10.6.0.7",
      "lastSeenOn": 1706280795302,
      "macAddress": [
        "00:22:48:1f:96:28",
        "00:22:48:1F:96:28",
      ],
      "machineTags": [],
      "make": null,
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "model": null,
      "name": "VMFromImage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "onboardingStatus": "Onboarded",
      "osArchitecture": "64-bit",
      "osBuild": null,
      "osPlatform": "Ubuntu",
      "osProcessor": "x64",
      "osVersion": undefined,
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/j1dev/providers/Microsoft.Compute/virtualMachines/VMFromImage",
      "riskScore": "None",
      "serial": null,
      "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
      "version": "20.4",
      "vmId": "00fe6c5e-889b-4f59-8489-f99bf14b035a",
    },
  ],
  "collectedRelationships": [
    {
      "_class": "MANAGES",
      "_fromEntityKey": "microsoft_defender_machine:241056b69203a660e7521c8c3bfc2476f8cf2ae0",
      "_key": "microsoft_defender_machine:241056b69203a660e7521c8c3bfc2476f8cf2ae0|manages|user_endpoint.241056b69203a660e7521c8c3bfc2476f8cf2ae0",
      "_toEntityKey": "user_endpoint.241056b69203a660e7521c8c3bfc2476f8cf2ae0",
      "_type": "microsoft_defender_machine_manages_user_endpoint",
      "displayName": "MANAGES",
    },
    {
      "_class": "MANAGES",
      "_fromEntityKey": "microsoft_defender_machine:3294214a41cbf3c14bda3d1024c5b74eca678841",
      "_key": "microsoft_defender_machine:3294214a41cbf3c14bda3d1024c5b74eca678841|manages|user_endpoint.3294214a41cbf3c14bda3d1024c5b74eca678841",
      "_toEntityKey": "user_endpoint.3294214a41cbf3c14bda3d1024c5b74eca678841",
      "_type": "microsoft_defender_machine_manages_user_endpoint",
      "displayName": "MANAGES",
    },
    {
      "_class": "MANAGES",
      "_fromEntityKey": "microsoft_defender_machine:5582c16c2b8866def83125320b1754481686f65b",
      "_key": "microsoft_defender_machine:5582c16c2b8866def83125320b1754481686f65b|manages|user_endpoint.5582c16c2b8866def83125320b1754481686f65b",
      "_toEntityKey": "user_endpoint.5582c16c2b8866def83125320b1754481686f65b",
      "_type": "microsoft_defender_machine_manages_user_endpoint",
      "displayName": "MANAGES",
    },
    {
      "_class": "MANAGES",
      "_fromEntityKey": "microsoft_defender_machine:6dd3f7ce1291c2ccd7a1da22f0934bca93ee2e24",
      "_key": "microsoft_defender_machine:6dd3f7ce1291c2ccd7a1da22f0934bca93ee2e24|manages|user_endpoint.6dd3f7ce1291c2ccd7a1da22f0934bca93ee2e24",
      "_toEntityKey": "user_endpoint.6dd3f7ce1291c2ccd7a1da22f0934bca93ee2e24",
      "_type": "microsoft_defender_machine_manages_user_endpoint",
      "displayName": "MANAGES",
    },
    {
      "_class": "MANAGES",
      "_fromEntityKey": "microsoft_defender_machine:7b14aeb07923dc786f6ff19ec58f879ae3416eac",
      "_key": "microsoft_defender_machine:7b14aeb07923dc786f6ff19ec58f879ae3416eac|manages|user_endpoint.7b14aeb07923dc786f6ff19ec58f879ae3416eac",
      "_toEntityKey": "user_endpoint.7b14aeb07923dc786f6ff19ec58f879ae3416eac",
      "_type": "microsoft_defender_machine_manages_user_endpoint",
      "displayName": "MANAGES",
    },
    {
      "_class": "MANAGES",
      "_fromEntityKey": "microsoft_defender_machine:9b189859e936033e7b446da0314f1eed352bd35c",
      "_key": "microsoft_defender_machine:9b189859e936033e7b446da0314f1eed352bd35c|manages|user_endpoint.9b189859e936033e7b446da0314f1eed352bd35c",
      "_toEntityKey": "user_endpoint.9b189859e936033e7b446da0314f1eed352bd35c",
      "_type": "microsoft_defender_machine_manages_user_endpoint",
      "displayName": "MANAGES",
    },
    {
      "_class": "MANAGES",
      "_fromEntityKey": "microsoft_defender_machine:c29ad1684888fc29409e6a01f5914660642e55ed",
      "_key": "microsoft_defender_machine:c29ad1684888fc29409e6a01f5914660642e55ed|manages|user_endpoint.c29ad1684888fc29409e6a01f5914660642e55ed",
      "_toEntityKey": "user_endpoint.c29ad1684888fc29409e6a01f5914660642e55ed",
      "_type": "microsoft_defender_machine_manages_user_endpoint",
      "displayName": "MANAGES",
    },
    {
      "_class": "MANAGES",
      "_fromEntityKey": "microsoft_defender_machine:def78db6835982e4a5118980fffe341984302f9f",
      "_key": "microsoft_defender_machine:def78db6835982e4a5118980fffe341984302f9f|manages|user_endpoint.def78db6835982e4a5118980fffe341984302f9f",
      "_toEntityKey": "user_endpoint.def78db6835982e4a5118980fffe341984302f9f",
      "_type": "microsoft_defender_machine_manages_user_endpoint",
      "displayName": "MANAGES",
    },
    {
      "_class": "MANAGES",
      "_fromEntityKey": "microsoft_defender_machine:f432f68bdc6b053334f3c2948eb277b883cafbe0",
      "_key": "microsoft_defender_machine:f432f68bdc6b053334f3c2948eb277b883cafbe0|manages|user_endpoint.f432f68bdc6b053334f3c2948eb277b883cafbe0",
      "_toEntityKey": "user_endpoint.f432f68bdc6b053334f3c2948eb277b883cafbe0",
      "_type": "microsoft_defender_machine_manages_user_endpoint",
      "displayName": "MANAGES",
    },
  ],
  "encounteredEntityKeys": Set {
    "user_endpoint.241056b69203a660e7521c8c3bfc2476f8cf2ae0",
    "user_endpoint.3294214a41cbf3c14bda3d1024c5b74eca678841",
    "user_endpoint.5582c16c2b8866def83125320b1754481686f65b",
    "user_endpoint.6dd3f7ce1291c2ccd7a1da22f0934bca93ee2e24",
    "user_endpoint.7b14aeb07923dc786f6ff19ec58f879ae3416eac",
    "user_endpoint.9b189859e936033e7b446da0314f1eed352bd35c",
    "user_endpoint.c29ad1684888fc29409e6a01f5914660642e55ed",
    "user_endpoint.def78db6835982e4a5118980fffe341984302f9f",
    "user_endpoint.f432f68bdc6b053334f3c2948eb277b883cafbe0",
    "microsoft_defender_account:local-integration-instance",
    "microsoft_defender_machine:241056b69203a660e7521c8c3bfc2476f8cf2ae0",
    "microsoft_defender_machine:3294214a41cbf3c14bda3d1024c5b74eca678841",
    "microsoft_defender_machine:5582c16c2b8866def83125320b1754481686f65b",
    "microsoft_defender_machine:6dd3f7ce1291c2ccd7a1da22f0934bca93ee2e24",
    "microsoft_defender_machine:7b14aeb07923dc786f6ff19ec58f879ae3416eac",
    "microsoft_defender_machine:9b189859e936033e7b446da0314f1eed352bd35c",
    "microsoft_defender_machine:c29ad1684888fc29409e6a01f5914660642e55ed",
    "microsoft_defender_machine:def78db6835982e4a5118980fffe341984302f9f",
    "microsoft_defender_machine:f432f68bdc6b053334f3c2948eb277b883cafbe0",
  },
  "encounteredTypes": [
    "microsoft_defender_account",
    "microsoft_defender_machine",
    "microsoft_defender_account_has_machine",
    "user_endpoint",
    "microsoft_defender_machine_manages_user_endpoint",
  ],
}
`;

exports[`#fetchMachines 1`] = `
{
  "collectedData": {},
  "collectedEntities": [
    {
      "_class": [
        "HostAgent",
      ],
      "_key": "microsoft_defender_machine:241056b69203a660e7521c8c3bfc2476f8cf2ae0",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "aadDeviceId": null,
            "agentVersion": "30.123032.19864.0",
            "computerDnsName": "VM1.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
            "defenderAvStatus": "NotSupported",
            "deviceValue": "Normal",
            "exclusionReason": null,
            "exposureLevel": "Low",
            "firstSeen": "2024-01-25T18:45:56.688814Z",
            "healthStatus": "Inactive",
            "id": "241056b69203a660e7521c8c3bfc2476f8cf2ae0",
            "ipAddresses": [
              {
                "ipAddress": "10.6.0.6",
                "macAddress": "000D3A9ABB3A",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "fe80::20d:3aff:fe9a:bb3a",
                "macAddress": "000D3A9ABB3A",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "127.0.0.1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "::1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
            ],
            "isAadJoined": null,
            "isExcluded": false,
            "isPotentialDuplication": false,
            "lastExternalIpAddress": "172.203.230.54",
            "lastIpAddress": "10.6.0.6",
            "lastSeen": "2024-01-25T18:45:56.688814Z",
            "machineTags": [],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "mergedIntoMachineId": null,
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": null,
            "osPlatform": "Ubuntu",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "None",
            "version": "20.4",
            "vmMetadata": {
              "cloudProvider": "Azure",
              "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/j1dev/providers/Microsoft.Compute/virtualMachines/VM1",
              "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
              "vmId": "2ca81940-456f-4e56-b80a-68b4f3d3da23",
            },
          },
        },
      ],
      "_type": "microsoft_defender_machine",
      "aadDeviceId": null,
      "agentVersion": "30.123032.19864.0",
      "computerDnsName": "VM1.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "createdOn": undefined,
      "defenderAvStatus": "NotSupported",
      "displayName": "VM1.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "firstSeenOn": 1706208356688,
      "function": [
        "endpoint-compliance",
        "endpoint-configuration",
        "endpoint-protection",
        "anti-malware",
        "vulnerability-detection",
        "container-security",
      ],
      "id": "241056b69203a660e7521c8c3bfc2476f8cf2ae0",
      "ipAddress": [
        "10.6.0.6",
        "fe80::20d:3aff:fe9a:bb3a",
      ],
      "lastSeenOn": 1706208356688,
      "macAddress": [
        "00:0d:3a:9a:bb:3a",
        "00:0D:3A:9A:BB:3A",
      ],
      "machineTags": [],
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "name": "VM1.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "onboardingStatus": "Onboarded",
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "riskScore": "None",
    },
    {
      "_class": [
        "HostAgent",
      ],
      "_key": "microsoft_defender_machine:3294214a41cbf3c14bda3d1024c5b74eca678841",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "aadDeviceId": null,
            "agentVersion": "30.123102.3.0",
            "computerDnsName": "gaston-ivm-test.us-central1-a.c.j1-gc-integration-dev-v3.internal",
            "defenderAvStatus": "NotSupported",
            "deviceValue": "Normal",
            "exclusionReason": null,
            "exposureLevel": "Low",
            "firstSeen": "2023-12-06T22:34:54.784629Z",
            "healthStatus": "Inactive",
            "id": "3294214a41cbf3c14bda3d1024c5b74eca678841",
            "ipAddresses": [
              {
                "ipAddress": "10.128.15.224",
                "macAddress": "42010A800FE0",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "fe80::4001:aff:fe80:fe0",
                "macAddress": "42010A800FE0",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "127.0.0.1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "::1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
            ],
            "isAadJoined": false,
            "isExcluded": false,
            "isPotentialDuplication": false,
            "lastExternalIpAddress": "35.193.158.217",
            "lastIpAddress": "10.128.15.224",
            "lastSeen": "2023-12-06T22:47:02.377675Z",
            "machineTags": [],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "mergedIntoMachineId": null,
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": null,
            "osPlatform": "Ubuntu",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "None",
            "version": "20.4",
            "vmMetadata": {
              "cloudProvider": "Azure",
              "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/gcp-integration-dev/providers/Microsoft.HybridCompute/machines/gaston-ivm-test-4037777038195379492",
              "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
              "vmId": "579ac495-e1e2-4fb1-b76e-85a706e79a9b",
            },
          },
        },
      ],
      "_type": "microsoft_defender_machine",
      "aadDeviceId": null,
      "agentVersion": "30.123102.3.0",
      "computerDnsName": "gaston-ivm-test.us-central1-a.c.j1-gc-integration-dev-v3.internal",
      "createdOn": undefined,
      "defenderAvStatus": "NotSupported",
      "displayName": "gaston-ivm-test.us-central1-a.c.j1-gc-integration-dev-v3.internal",
      "firstSeenOn": 1701902094784,
      "function": [
        "endpoint-compliance",
        "endpoint-configuration",
        "endpoint-protection",
        "anti-malware",
        "vulnerability-detection",
        "container-security",
      ],
      "id": "3294214a41cbf3c14bda3d1024c5b74eca678841",
      "ipAddress": [
        "10.128.15.224",
        "fe80::4001:aff:fe80:fe0",
      ],
      "lastSeenOn": 1701902822377,
      "macAddress": [
        "42:01:0a:80:0f:e0",
        "42:01:0A:80:0F:E0",
      ],
      "machineTags": [],
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "name": "gaston-ivm-test.us-central1-a.c.j1-gc-integration-dev-v3.internal",
      "onboardingStatus": "Onboarded",
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "riskScore": "None",
    },
    {
      "_class": [
        "HostAgent",
      ],
      "_key": "microsoft_defender_machine:5582c16c2b8866def83125320b1754481686f65b",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "aadDeviceId": null,
            "agentVersion": "30.124012.1.0",
            "computerDnsName": "sonarqube.us-central1-a.c.j1-gc-integration-dev-v3.internal",
            "defenderAvStatus": "NotSupported",
            "deviceValue": "Normal",
            "exclusionReason": null,
            "exposureLevel": "Low",
            "firstSeen": "2023-01-17T19:21:57.487Z",
            "healthStatus": "Active",
            "id": "5582c16c2b8866def83125320b1754481686f65b",
            "ipAddresses": [
              {
                "ipAddress": "fe80::d9:fcff:fe17:ff1e",
                "macAddress": "02D9FC17FF1E",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "172.17.0.1",
                "macAddress": "0242F5BBD085",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "fe80::42:f5ff:febb:d085",
                "macAddress": "0242F5BBD085",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "10.128.15.219",
                "macAddress": "42010A800FDB",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "fe80::4001:aff:fe80:fdb",
                "macAddress": "42010A800FDB",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "127.0.0.1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "::1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
            ],
            "isAadJoined": false,
            "isExcluded": false,
            "isPotentialDuplication": false,
            "lastExternalIpAddress": "34.171.196.173",
            "lastIpAddress": "10.128.15.219",
            "lastSeen": "2024-03-25T23:27:59.136203Z",
            "machineTags": [],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "mergedIntoMachineId": null,
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": null,
            "osPlatform": "Debian",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "None",
            "version": "Other",
            "vmMetadata": {
              "cloudProvider": "Azure",
              "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/gcp-integration-dev/providers/Microsoft.HybridCompute/machines/sonarqube-4356273881400950770",
              "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
              "vmId": "f8c3afb9-773c-4c4b-84fa-173cab19c7e6",
            },
          },
        },
      ],
      "_type": "microsoft_defender_machine",
      "aadDeviceId": null,
      "agentVersion": "30.124012.1.0",
      "computerDnsName": "sonarqube.us-central1-a.c.j1-gc-integration-dev-v3.internal",
      "createdOn": undefined,
      "defenderAvStatus": "NotSupported",
      "displayName": "sonarqube.us-central1-a.c.j1-gc-integration-dev-v3.internal",
      "firstSeenOn": 1673983317487,
      "function": [
        "endpoint-compliance",
        "endpoint-configuration",
        "endpoint-protection",
        "anti-malware",
        "vulnerability-detection",
        "container-security",
      ],
      "id": "5582c16c2b8866def83125320b1754481686f65b",
      "ipAddress": [
        "fe80::d9:fcff:fe17:ff1e",
        "172.17.0.1",
        "fe80::42:f5ff:febb:d085",
        "10.128.15.219",
        "fe80::4001:aff:fe80:fdb",
      ],
      "lastSeenOn": 1711409279136,
      "macAddress": [
        "42:01:0a:80:0f:db",
        "42:01:0A:80:0F:DB",
      ],
      "machineTags": [],
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "name": "sonarqube.us-central1-a.c.j1-gc-integration-dev-v3.internal",
      "onboardingStatus": "Onboarded",
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "riskScore": "None",
    },
    {
      "_class": [
        "HostAgent",
      ],
      "_key": "microsoft_defender_machine:6dd3f7ce1291c2ccd7a1da22f0934bca93ee2e24",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "aadDeviceId": null,
            "agentVersion": "30.123062.10.0",
            "computerDnsName": "instance-1.us-central1-a.c.j1-gc-integration-dev-v3.internal",
            "defenderAvStatus": "NotSupported",
            "deviceValue": "Normal",
            "exclusionReason": null,
            "exposureLevel": "Medium",
            "firstSeen": "2023-07-29T11:28:10.003613Z",
            "healthStatus": "Active",
            "id": "6dd3f7ce1291c2ccd7a1da22f0934bca93ee2e24",
            "ipAddresses": [
              {
                "ipAddress": "10.128.15.223",
                "macAddress": "42010A800FDF",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "fe80::4001:aff:fe80:fdf",
                "macAddress": "42010A800FDF",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "127.0.0.1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "::1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
            ],
            "isAadJoined": false,
            "isExcluded": false,
            "isPotentialDuplication": false,
            "lastExternalIpAddress": "34.172.130.250",
            "lastIpAddress": "10.128.15.223",
            "lastSeen": "2024-03-26T00:04:48.577193Z",
            "machineTags": [],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "mergedIntoMachineId": null,
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": null,
            "osPlatform": "Debian",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "None",
            "version": "Other",
            "vmMetadata": {
              "cloudProvider": "Azure",
              "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/gcp-integration-dev/providers/Microsoft.HybridCompute/machines/instance-1-4375182715392730702",
              "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
              "vmId": "d0d49744-fa25-40c9-8d5f-832a3fdf8155",
            },
          },
        },
      ],
      "_type": "microsoft_defender_machine",
      "aadDeviceId": null,
      "agentVersion": "30.123062.10.0",
      "computerDnsName": "instance-1.us-central1-a.c.j1-gc-integration-dev-v3.internal",
      "createdOn": undefined,
      "defenderAvStatus": "NotSupported",
      "displayName": "instance-1.us-central1-a.c.j1-gc-integration-dev-v3.internal",
      "firstSeenOn": 1690630090003,
      "function": [
        "endpoint-compliance",
        "endpoint-configuration",
        "endpoint-protection",
        "anti-malware",
        "vulnerability-detection",
        "container-security",
      ],
      "id": "6dd3f7ce1291c2ccd7a1da22f0934bca93ee2e24",
      "ipAddress": [
        "10.128.15.223",
        "fe80::4001:aff:fe80:fdf",
      ],
      "lastSeenOn": 1711411488577,
      "macAddress": [
        "42:01:0a:80:0f:df",
        "42:01:0A:80:0F:DF",
      ],
      "machineTags": [],
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "name": "instance-1.us-central1-a.c.j1-gc-integration-dev-v3.internal",
      "onboardingStatus": "Onboarded",
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "riskScore": "None",
    },
    {
      "_class": [
        "HostAgent",
      ],
      "_key": "microsoft_defender_machine:7b14aeb07923dc786f6ff19ec58f879ae3416eac",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "aadDeviceId": null,
            "agentVersion": "10.8560.20348.1906",
            "computerDnsName": "int-cmdc01.contoso.com",
            "defenderAvStatus": "NotSupported",
            "deviceValue": "Normal",
            "exclusionReason": null,
            "exposureLevel": "High",
            "firstSeen": "2023-06-16T21:55:01.0275511Z",
            "healthStatus": "Inactive",
            "id": "7b14aeb07923dc786f6ff19ec58f879ae3416eac",
            "ipAddresses": [],
            "isAadJoined": false,
            "isExcluded": false,
            "isPotentialDuplication": false,
            "lastExternalIpAddress": "20.228.186.184",
            "lastIpAddress": "10.0.0.4",
            "lastSeen": "2024-01-26T15:44:34.551332Z",
            "machineTags": [],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "mergedIntoMachineId": null,
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": 20348,
            "osPlatform": "WindowsServer2022",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "None",
            "version": "21H2",
            "vmMetadata": {
              "cloudProvider": "Azure",
              "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/INT-CM/providers/Microsoft.Compute/virtualMachines/int-cmdc01",
              "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
              "vmId": "8e71e669-b257-4bfb-ac7d-c1687e3a984b",
            },
          },
        },
      ],
      "_type": "microsoft_defender_machine",
      "aadDeviceId": null,
      "agentVersion": "10.8560.20348.1906",
      "computerDnsName": "int-cmdc01.contoso.com",
      "createdOn": undefined,
      "defenderAvStatus": "NotSupported",
      "displayName": "int-cmdc01.contoso.com",
      "firstSeenOn": 1686952501027,
      "function": [
        "endpoint-compliance",
        "endpoint-configuration",
        "endpoint-protection",
        "anti-malware",
        "vulnerability-detection",
        "container-security",
      ],
      "id": "7b14aeb07923dc786f6ff19ec58f879ae3416eac",
      "ipAddress": [],
      "lastSeenOn": 1706283874551,
      "macAddress": [],
      "machineTags": [],
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "name": "int-cmdc01.contoso.com",
      "onboardingStatus": "Onboarded",
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "riskScore": "None",
    },
    {
      "_class": [
        "HostAgent",
      ],
      "_key": "microsoft_defender_machine:9b189859e936033e7b446da0314f1eed352bd35c",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "aadDeviceId": null,
            "agentVersion": "30.123032.19864.0",
            "computerDnsName": "gonzalo.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
            "defenderAvStatus": "NotSupported",
            "deviceValue": "Normal",
            "exclusionReason": null,
            "exposureLevel": "None",
            "firstSeen": "2024-01-25T18:17:45.859768Z",
            "healthStatus": "Inactive",
            "id": "9b189859e936033e7b446da0314f1eed352bd35c",
            "ipAddresses": [
              {
                "ipAddress": "10.6.0.6",
                "macAddress": "0022482C268E",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "fe80::222:48ff:fe2c:268e",
                "macAddress": "0022482C268E",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "127.0.0.1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "::1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
            ],
            "isAadJoined": null,
            "isExcluded": false,
            "isPotentialDuplication": false,
            "lastExternalIpAddress": "74.235.111.85",
            "lastIpAddress": "10.6.0.6",
            "lastSeen": "2024-01-25T18:17:45.859768Z",
            "machineTags": [],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "mergedIntoMachineId": null,
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": null,
            "osPlatform": "Other",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "None",
            "version": "Other",
            "vmMetadata": {
              "cloudProvider": "Azure",
              "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/j1dev/providers/Microsoft.Compute/virtualMachines/gonzalo",
              "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
              "vmId": "c5391253-9dc6-45fa-93d8-9933de00f25e",
            },
          },
        },
      ],
      "_type": "microsoft_defender_machine",
      "aadDeviceId": null,
      "agentVersion": "30.123032.19864.0",
      "computerDnsName": "gonzalo.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "createdOn": undefined,
      "defenderAvStatus": "NotSupported",
      "displayName": "gonzalo.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "firstSeenOn": 1706206665859,
      "function": [
        "endpoint-compliance",
        "endpoint-configuration",
        "endpoint-protection",
        "anti-malware",
        "vulnerability-detection",
        "container-security",
      ],
      "id": "9b189859e936033e7b446da0314f1eed352bd35c",
      "ipAddress": [
        "10.6.0.6",
        "fe80::222:48ff:fe2c:268e",
      ],
      "lastSeenOn": 1706206665859,
      "macAddress": [
        "00:22:48:2c:26:8e",
        "00:22:48:2C:26:8E",
      ],
      "machineTags": [],
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "name": "gonzalo.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "onboardingStatus": "Onboarded",
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "riskScore": "None",
    },
    {
      "_class": [
        "HostAgent",
      ],
      "_key": "microsoft_defender_machine:c29ad1684888fc29409e6a01f5914660642e55ed",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "aadDeviceId": null,
            "agentVersion": "30.123032.19864.0",
            "computerDnsName": "VMfromsharedimage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
            "defenderAvStatus": "NotSupported",
            "deviceValue": "Normal",
            "exclusionReason": null,
            "exposureLevel": "None",
            "firstSeen": "2024-01-26T15:15:27.089637Z",
            "healthStatus": "Inactive",
            "id": "c29ad1684888fc29409e6a01f5914660642e55ed",
            "ipAddresses": [
              {
                "ipAddress": "10.6.0.8",
                "macAddress": "6045BDD404C5",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "fe80::6245:bdff:fed4:4c5",
                "macAddress": "6045BDD404C5",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "127.0.0.1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "::1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
            ],
            "isAadJoined": null,
            "isExcluded": false,
            "isPotentialDuplication": false,
            "lastExternalIpAddress": "52.186.180.57",
            "lastIpAddress": "10.6.0.8",
            "lastSeen": "2024-01-26T15:25:27.089852Z",
            "machineTags": [],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "mergedIntoMachineId": null,
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": null,
            "osPlatform": "Ubuntu",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "None",
            "version": "20.4",
            "vmMetadata": {
              "cloudProvider": "Azure",
              "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/j1dev/providers/Microsoft.Compute/virtualMachines/VMfromsharedimage",
              "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
              "vmId": "aca8c64e-1f21-4221-9bfe-1c82c066f3ed",
            },
          },
        },
      ],
      "_type": "microsoft_defender_machine",
      "aadDeviceId": null,
      "agentVersion": "30.123032.19864.0",
      "computerDnsName": "VMfromsharedimage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "createdOn": undefined,
      "defenderAvStatus": "NotSupported",
      "displayName": "VMfromsharedimage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "firstSeenOn": 1706282127089,
      "function": [
        "endpoint-compliance",
        "endpoint-configuration",
        "endpoint-protection",
        "anti-malware",
        "vulnerability-detection",
        "container-security",
      ],
      "id": "c29ad1684888fc29409e6a01f5914660642e55ed",
      "ipAddress": [
        "10.6.0.8",
        "fe80::6245:bdff:fed4:4c5",
      ],
      "lastSeenOn": 1706282727089,
      "macAddress": [
        "60:45:bd:d4:04:c5",
        "60:45:BD:D4:04:C5",
      ],
      "machineTags": [],
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "name": "VMfromsharedimage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "onboardingStatus": "Onboarded",
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "riskScore": "None",
    },
    {
      "_class": [
        "HostAgent",
      ],
      "_key": "microsoft_defender_machine:def78db6835982e4a5118980fffe341984302f9f",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "aadDeviceId": null,
            "agentVersion": "30.123032.19864.0",
            "computerDnsName": "fromImage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
            "defenderAvStatus": "NotSupported",
            "deviceValue": "Normal",
            "exclusionReason": null,
            "exposureLevel": "None",
            "firstSeen": "2024-01-25T17:11:51.415127Z",
            "healthStatus": "Inactive",
            "id": "def78db6835982e4a5118980fffe341984302f9f",
            "ipAddresses": [
              {
                "ipAddress": "10.6.0.5",
                "macAddress": "6045BDEE3402",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "fe80::6245:bdff:feee:3402",
                "macAddress": "6045BDEE3402",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "127.0.0.1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "::1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
            ],
            "isAadJoined": false,
            "isExcluded": false,
            "isPotentialDuplication": false,
            "lastExternalIpAddress": "172.203.231.0",
            "lastIpAddress": "10.6.0.5",
            "lastSeen": "2024-01-25T17:31:54.106498Z",
            "machineTags": [],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "mergedIntoMachineId": null,
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": null,
            "osPlatform": "Ubuntu",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "None",
            "version": "20.4",
            "vmMetadata": {
              "cloudProvider": "Azure",
              "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/j1dev/providers/Microsoft.Compute/virtualMachines/fromImage",
              "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
              "vmId": "9789f00d-8695-4051-b46b-c932c3640c5b",
            },
          },
        },
      ],
      "_type": "microsoft_defender_machine",
      "aadDeviceId": null,
      "agentVersion": "30.123032.19864.0",
      "computerDnsName": "fromImage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "createdOn": undefined,
      "defenderAvStatus": "NotSupported",
      "displayName": "fromImage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "firstSeenOn": 1706202711415,
      "function": [
        "endpoint-compliance",
        "endpoint-configuration",
        "endpoint-protection",
        "anti-malware",
        "vulnerability-detection",
        "container-security",
      ],
      "id": "def78db6835982e4a5118980fffe341984302f9f",
      "ipAddress": [
        "10.6.0.5",
        "fe80::6245:bdff:feee:3402",
      ],
      "lastSeenOn": 1706203914106,
      "macAddress": [
        "60:45:bd:ee:34:02",
        "60:45:BD:EE:34:02",
      ],
      "machineTags": [],
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "name": "fromImage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "onboardingStatus": "Onboarded",
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "riskScore": "None",
    },
    {
      "_class": [
        "HostAgent",
      ],
      "_key": "microsoft_defender_machine:f432f68bdc6b053334f3c2948eb277b883cafbe0",
      "_rawData": [
        {
          "name": "default",
          "rawData": {
            "aadDeviceId": null,
            "agentVersion": "30.123032.19864.0",
            "computerDnsName": "VMFromImage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
            "defenderAvStatus": "NotSupported",
            "deviceValue": "Normal",
            "exclusionReason": null,
            "exposureLevel": "Low",
            "firstSeen": "2024-01-25T18:25:19.388999Z",
            "healthStatus": "Inactive",
            "id": "f432f68bdc6b053334f3c2948eb277b883cafbe0",
            "ipAddresses": [
              {
                "ipAddress": "10.6.0.7",
                "macAddress": "0022481F9628",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "fe80::222:48ff:fe1f:9628",
                "macAddress": "0022481F9628",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "127.0.0.1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
              {
                "ipAddress": "::1",
                "macAddress": "000000000000",
                "operationalStatus": "Up",
                "type": "Other",
              },
            ],
            "isAadJoined": false,
            "isExcluded": false,
            "isPotentialDuplication": false,
            "lastExternalIpAddress": "74.235.110.3",
            "lastIpAddress": "10.6.0.7",
            "lastSeen": "2024-01-26T14:53:15.302862Z",
            "machineTags": [],
            "managedBy": "Unknown",
            "managedByStatus": "Unknown",
            "mergedIntoMachineId": null,
            "onboardingStatus": "Onboarded",
            "osArchitecture": "64-bit",
            "osBuild": null,
            "osPlatform": "Ubuntu",
            "osProcessor": "x64",
            "osVersion": null,
            "rbacGroupId": 0,
            "rbacGroupName": null,
            "riskScore": "None",
            "version": "20.4",
            "vmMetadata": {
              "cloudProvider": "Azure",
              "resourceId": "/subscriptions/193f89dc-6225-4a80-bacb-96b32fbf6dd0/resourceGroups/j1dev/providers/Microsoft.Compute/virtualMachines/VMFromImage",
              "subscriptionId": "193f89dc-6225-4a80-bacb-96b32fbf6dd0",
              "vmId": "00fe6c5e-889b-4f59-8489-f99bf14b035a",
            },
          },
        },
      ],
      "_type": "microsoft_defender_machine",
      "aadDeviceId": null,
      "agentVersion": "30.123032.19864.0",
      "computerDnsName": "VMFromImage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "createdOn": undefined,
      "defenderAvStatus": "NotSupported",
      "displayName": "VMFromImage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "firstSeenOn": 1706207119388,
      "function": [
        "endpoint-compliance",
        "endpoint-configuration",
        "endpoint-protection",
        "anti-malware",
        "vulnerability-detection",
        "container-security",
      ],
      "id": "f432f68bdc6b053334f3c2948eb277b883cafbe0",
      "ipAddress": [
        "10.6.0.7",
        "fe80::222:48ff:fe1f:9628",
      ],
      "lastSeenOn": 1706280795302,
      "macAddress": [
        "00:22:48:1f:96:28",
        "00:22:48:1F:96:28",
      ],
      "machineTags": [],
      "managedBy": "Unknown",
      "managedByStatus": "Unknown",
      "name": "VMFromImage.oipfwnijg2hexlv4f1mw1ugjgg.bx.internal.cloudapp.net",
      "onboardingStatus": "Onboarded",
      "rbacGroupId": 0,
      "rbacGroupName": null,
      "riskScore": "None",
    },
  ],
  "collectedRelationships": [
    {
      "_class": "HAS",
      "_fromEntityKey": "microsoft_defender_account:local-integration-instance",
      "_key": "microsoft_defender_account:local-integration-instance|has|microsoft_defender_machine:241056b69203a660e7521c8c3bfc2476f8cf2ae0",
      "_toEntityKey": "microsoft_defender_machine:241056b69203a660e7521c8c3bfc2476f8cf2ae0",
      "_type": "microsoft_defender_account_has_machine",
      "displayName": "HAS",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "microsoft_defender_account:local-integration-instance",
      "_key": "microsoft_defender_account:local-integration-instance|has|microsoft_defender_machine:3294214a41cbf3c14bda3d1024c5b74eca678841",
      "_toEntityKey": "microsoft_defender_machine:3294214a41cbf3c14bda3d1024c5b74eca678841",
      "_type": "microsoft_defender_account_has_machine",
      "displayName": "HAS",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "microsoft_defender_account:local-integration-instance",
      "_key": "microsoft_defender_account:local-integration-instance|has|microsoft_defender_machine:5582c16c2b8866def83125320b1754481686f65b",
      "_toEntityKey": "microsoft_defender_machine:5582c16c2b8866def83125320b1754481686f65b",
      "_type": "microsoft_defender_account_has_machine",
      "displayName": "HAS",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "microsoft_defender_account:local-integration-instance",
      "_key": "microsoft_defender_account:local-integration-instance|has|microsoft_defender_machine:6dd3f7ce1291c2ccd7a1da22f0934bca93ee2e24",
      "_toEntityKey": "microsoft_defender_machine:6dd3f7ce1291c2ccd7a1da22f0934bca93ee2e24",
      "_type": "microsoft_defender_account_has_machine",
      "displayName": "HAS",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "microsoft_defender_account:local-integration-instance",
      "_key": "microsoft_defender_account:local-integration-instance|has|microsoft_defender_machine:7b14aeb07923dc786f6ff19ec58f879ae3416eac",
      "_toEntityKey": "microsoft_defender_machine:7b14aeb07923dc786f6ff19ec58f879ae3416eac",
      "_type": "microsoft_defender_account_has_machine",
      "displayName": "HAS",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "microsoft_defender_account:local-integration-instance",
      "_key": "microsoft_defender_account:local-integration-instance|has|microsoft_defender_machine:9b189859e936033e7b446da0314f1eed352bd35c",
      "_toEntityKey": "microsoft_defender_machine:9b189859e936033e7b446da0314f1eed352bd35c",
      "_type": "microsoft_defender_account_has_machine",
      "displayName": "HAS",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "microsoft_defender_account:local-integration-instance",
      "_key": "microsoft_defender_account:local-integration-instance|has|microsoft_defender_machine:c29ad1684888fc29409e6a01f5914660642e55ed",
      "_toEntityKey": "microsoft_defender_machine:c29ad1684888fc29409e6a01f5914660642e55ed",
      "_type": "microsoft_defender_account_has_machine",
      "displayName": "HAS",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "microsoft_defender_account:local-integration-instance",
      "_key": "microsoft_defender_account:local-integration-instance|has|microsoft_defender_machine:def78db6835982e4a5118980fffe341984302f9f",
      "_toEntityKey": "microsoft_defender_machine:def78db6835982e4a5118980fffe341984302f9f",
      "_type": "microsoft_defender_account_has_machine",
      "displayName": "HAS",
    },
    {
      "_class": "HAS",
      "_fromEntityKey": "microsoft_defender_account:local-integration-instance",
      "_key": "microsoft_defender_account:local-integration-instance|has|microsoft_defender_machine:f432f68bdc6b053334f3c2948eb277b883cafbe0",
      "_toEntityKey": "microsoft_defender_machine:f432f68bdc6b053334f3c2948eb277b883cafbe0",
      "_type": "microsoft_defender_account_has_machine",
      "displayName": "HAS",
    },
  ],
  "encounteredEntityKeys": Set {
    "microsoft_defender_machine:241056b69203a660e7521c8c3bfc2476f8cf2ae0",
    "microsoft_defender_machine:3294214a41cbf3c14bda3d1024c5b74eca678841",
    "microsoft_defender_machine:5582c16c2b8866def83125320b1754481686f65b",
    "microsoft_defender_machine:6dd3f7ce1291c2ccd7a1da22f0934bca93ee2e24",
    "microsoft_defender_machine:7b14aeb07923dc786f6ff19ec58f879ae3416eac",
    "microsoft_defender_machine:9b189859e936033e7b446da0314f1eed352bd35c",
    "microsoft_defender_machine:c29ad1684888fc29409e6a01f5914660642e55ed",
    "microsoft_defender_machine:def78db6835982e4a5118980fffe341984302f9f",
    "microsoft_defender_machine:f432f68bdc6b053334f3c2948eb277b883cafbe0",
    "microsoft_defender_account:local-integration-instance",
  },
  "encounteredTypes": [
    "microsoft_defender_account",
    "microsoft_defender_machine",
    "microsoft_defender_account_has_machine",
  ],
}
`;
